--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
   </head>
-  <body class="body">
-    <header>
+  <body class="bodyclass">
+    <header class="header">
+      <div class="container">
       <!--NAWIGACJA GŁÓWNA-->
       <a class="logo" href="index.html"
         >Web<span class="logo-span">Studio</span></a
@@ -34,6 +39,7 @@
           <a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <!--GŁÓWNY TEKST-->
