--- a/index.html
+++ b/index.html
@@ -18,39 +18,43 @@
   <body class="bodyclass">
     <header class="header">
       <div class="container">
-      <!--NAWIGACJA GŁÓWNA-->
-      <a class="logo" href="index.html"
-        >Web<span class="logo-span">Studio</span></a
-      >
-      <nav class="navigation">
-        <ul class="nav-list">
-          <li><a class="nav-agency" href="#">Agencja</a></li>
-          <li><a class="nav-portfolio" href="portfolio.html">Portfolio</a></li>
-          <li><a class="nav-contact" href="#">Kontakt</a></li>
+        <!--NAWIGACJA GŁÓWNA-->
+        <a class="logo" href="index.html"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="nav-list">
+            <li><a class="nav-agency" href="#">Agencja</a></li>
+            <li>
+              <a class="nav-portfolio" href="portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="nav-contact" href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contact">
+          <li>
+            <a class="header-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="header-contact">
-        <li>
-          <a class="header-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-phone" href="tel:+48111111111">+48 111 111 111</a>
-        </li>
-      </ul>
-    </div>
+      </div>
     </header>
     <main>
       <!--GŁÓWNY TEKST-->
       <article class="article">
-        <div>
-          <h1 class="h1">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button class="button-order" type="button">Zamów usługę</button>
+        <div class="container">
+          <div class="article-title">
+            <h1 class="h1">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+            <button class="button-order" type="button">Zamów usługę</button>
+          </div>
         </div>
       </article>
       <!--NASZE ATUTY-->
-      <section class="section1">
+      <section class="section">
         <div>
           <ul class="section1-list">
             <li>
